--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -10,17 +10,30 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/netinfo": "^11.2.0",
+    "@react-navigation/bottom-tabs": "^7.2.2",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.5",
+    "axios": "^1.6.2",
+    "date-fns": "^3.0.6",
     "expo": "~54.0.0",
+    "expo-auth-session": "~7.0.8",
     "expo-constants": "^18.0.9",
+    "expo-crypto": "~15.0.7",
     "expo-linking": "^8.0.8",
+    "expo-notifications": "~0.30.0",
+    "expo-secure-store": "~14.1.0",
+    "expo-speech": "~13.1.0",
     "expo-status-bar": "~3.0.8",
-    "react": "19.1.0",
-    "react-native": "0.81.4",
+    "expo-web-browser": "~15.0.8",
+    "google-auth-library": "^10.4.1",
+    "react": "18.3.1",
+    "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
