--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -7,8 +7,15 @@ DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=public"
 # JWT Secret (generate a random string)
 JWT_SECRET="your-super-secret-jwt-key-change-this-in-production"
 
-# OpenAI API Key
+# AI Provider API Keys
+# Google Gemini (FREE - Default Provider)
+GOOGLE_API_KEY="your-google-gemini-api-key"
+
+# OpenAI (Paid - Optional)
 OPENAI_API_KEY="sk-your-openai-api-key-here"
+
+# Anthropic Claude (Paid - Optional)
+ANTHROPIC_API_KEY="sk-ant-your-anthropic-api-key-here"
 
 # Server Configuration
 PORT=3001
