--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,6 +28,7 @@
     "@anthropic-ai/sdk": "^0.67.0",
     "@google/generative-ai": "^0.24.1",
     "@langchain/google-genai": "^0.2.18",
+    "@pinecone-database/pinecone": "^6.1.2",
     "@prisma/client": "^6.17.0",
     "@supabase/supabase-js": "^2.75.0",
     "bcryptjs": "^3.0.2",
