feat: Implement Pinecone vector search for semantic document discovery
🔍 Vector Search Integration
- Created Pinecone utility library (apps/api/src/lib/pinecone.ts)
  - OpenAI text-embedding-3-small integration (1536 dimensions)
  - storeDocumentVector: Async vector storage on document create
  - updateDocumentVector: Re-vectorize on content change
  - deleteDocumentVector: Clean up vectors on document delete
  - searchSimilarDocuments: Semantic search with userId filtering

📄 Enhanced Document Routes
- POST /: Async vector storage after document creation (non-blocking)
- PUT /:id: Async vector update when content changes (non-blocking)
- DELETE /:id: Async vector deletion (non-blocking)
- GET /search: New semantic search endpoint
  - Query → OpenAI embedding → Pinecone similarity search
  - Joins with Supabase for full document details
  - Returns ranked results with similarity scores
  - Fixed route ordering: /search before /:id to prevent conflicts

🧪 Testing Infrastructure
- Created test script (apps/api/src/test/vector-search.test.ts)
  - Phase 1: Test embedding creation
  - Phase 2: Test vector storage
  - Phase 3: Test semantic search
  - Comprehensive troubleshooting guidance

📚 Documentation
- PINECONE_SETUP.md: Complete setup guide
  - Pinecone account and index creation (console + code)
  - Environment configuration steps
  - Architecture diagrams and data flow
  - API endpoint documentation with examples
  - Troubleshooting common errors (index not found, dimension mismatch, rate limits)
  - Cost analysis (free tier vs production scaling)
  - Best practices (chunking, metadata, batch ops, error handling)

⚙️ Configuration
- Added PINECONE_API_KEY to .env.example
- Removed outdated DEPLOYMENT.md (superseded by PINECONE_SETUP.md)

🎯 Architecture Decisions
- Fire-and-forget pattern: Vector operations don't block API responses
- Cosine similarity: Best for semantic text matching
- Metadata filtering: userId + type='document' for tenant isolation
- Error resi

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -17,6 +17,9 @@ OPENAI_API_KEY="sk-your-openai-api-key-here"
 # Anthropic Claude (Paid - Optional)
 ANTHROPIC_API_KEY="sk-ant-your-anthropic-api-key-here"
 
+# Pinecone Vector Database (for semantic search)
+PINECONE_API_KEY="your-pinecone-api-key-here"
+
 # Server Configuration
 PORT=3001
 NODE_ENV=development
